cluster/base/qbittorrent/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  namespace: qbittorrent
  labels:
    app: qbittorrent
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      nodeSelector:
        node-role.kubernetes.io/storage: "true"
      containers:
      - name: qbittorrent
        image: linuxserver/qbittorrent:5.2.4
        ports:
        - containerPort: 8080
          name: webui
        - containerPort: 6881
          hostPort: 6881
          name: torrenting
          protocol: TCP
        - containerPort: 6881
          hostPort: 6881
          name: torrenting-udp
          protocol: UDP
        volumeMounts:
        - name: config
          mountPath: /config
        - name: downloads
          mountPath: /downloads
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: qbittorrent-config
      - name: downloads
        persistentVolumeClaim:
          claimName: qbittorrent-downloads
