cluster/base/qbittorrent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: qbittorrent
spec:
  type: ClusterIP
  selector:
    app: qbittorrent
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: webui
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-torrenting
  namespace: qbittorrent
spec:
  type: ClusterIP
  selector:
    app: qbittorrent
  ports:
  - port: 6881
    targetPort: 6881
    protocol: TCP
    name: torrenting
  - port: 6881
    targetPort: 6881
    protocol: UDP
    name: torrenting-udp
